--- a/index.css
+++ b/index.css
@@ -1,95 +1,164 @@
+@import url("./assets/fonts/stylesheet.css");
+
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 /* DIV.PLANO */
 
 div.plano {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    justify-content: center;
+  justify-content: center;
 
-    border-radius: 1vh;
-    box-shadow: 1vh 1vh 1vh black;
+  border-radius: 1vh;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
-    width: fit-content;
-    overflow: hidden;
+  width: fit-content;
+  overflow: hidden;
 }
 
-div.plano h1,h2 {
-    text-align: center;
+div.plano p {
+  font-family: "Avenir Book", sans-serif;
+  color: #000f4a;
+  font-size: 1em;
 }
 
-div.plano h1.titulo {
-    font-size: 5em;
+div.plano h1,
+h2 {
+  font-family: "Avenir Black", sans-serif;
+  text-align: center;
 }
 
 div.plano > div {
-    display: flex;
+  display: flex;
 
-    justify-content: center;
-    align-items: center;
-    align-self: center;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 
-    border-bottom: 1px #808184 solid;
-    width: 90%;
+  border-bottom: 1px #80818498 solid;
+  width: 90%;
 
-    padding-block: 3vh;
+  padding-block: 3vh;
 }
 
 div.plano > div.column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 /* PLANO => CABEÇALHO */
 
 div.plano div.cabecalho {
-    width: 100%;
-    background-color: #808184;
+  width: 100%;
+  background-color: #808184;
 
-    padding-block: 3vh;
-    border-bottom: none;
+  padding-block: 2vh;
+  border-bottom: none;
 }
 
 div.plano div.cabecalho h1 {
-    color: white;
-    text-shadow: 0 0 2vh white;
-    font-size: 3em;
+  color: white;
+  text-shadow: 0 0 2vh white;
+  font-size: 2em;
+}
+
+/* PLANO => TITULO */
+
+div.plano div.titulo-container img {
+  width: 90%;
 }
 
 /* PLANO => VANTAGENS */
 
 div.plano div.vantagens {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    justify-content: start;
-    align-items: flex-start;
+  justify-content: start;
+  align-items: flex-start;
 }
 
 div.plano div.vantagem {
-    display: flex;
-    margin-bottom: 1vh;
+  display: flex;
+
+  align-items: center;
+
+  margin-bottom: 1vh;
 }
 
 div.plano div.vantagem img {
-    width: 3vh;
-    padding-right: 2vh;
-}
-
-div.plano div.vantagem p {
-    font-size: 1.4em;
+  width: 4vh;
+  height: 4vh;
+  padding-right: 2vh;
 }
 
 /* PLANO => SERVIÇOS */
 
 div.plano div.servicos {
-    display: flex;
-    gap: 3vh;
+  display: flex;
+  gap: 3vh;
 }
 
 div.plano div.servicos img {
-    width: 5vh;
+  width: 7vh;
+}
+
+/* PLANO => APPS */
+
+div.plano div.apps {
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+
+div.plano div.icones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2vh;
+
+  margin-top: 2vh;
+}
+
+div.plano div.icones img {
+  width: 10vh;
+  border-radius: 1vh;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px -2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 6px 0px;
+}
+
+/* PLANO => BOTÃO CONTRATAR */
+
+div.plano button {
+  padding: 1vh;
+
+  font-family: "Avenir Black", sans-serif;
+  font-size: 1.3em;
+  text-transform: uppercase;
+  color: #808184;
+
+  border: 1px solid #808184;
+  border-radius: 3vh;
+
+  background: none;
+  width: 90%;
+  align-self: center;
+
+  outline: none;
+  cursor: pointer;
+  transition: 0.2s all;
+
+  margin-bottom: 2vh;
+}
+
+div.plano button:hover {
+  transform: scale(1.05);
+  background-color: #80818454;
 }
